manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sliding-puzzle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sliding-puzzle
  template:
    metadata:
      labels:
        app: sliding-puzzle
    spec:
      containers:
        - name: sliding-puzzle
          image: lyr7d1h/sliding_puzzle:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "200Mi"
              cpu: "1"
