manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sliding_puzzle-service
spec:
  type: ClusterIP
  selector:
    app: sliding_puzzle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
