manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sliding_puzzle-ingress

spec:
  rules:
    - host: sliding.ivelthoven.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sliding_puzzle-service
                port:
                  number: 80
